[tool.poetry]
name = "misc-tools"
version = "0.1.0"
description = ""
authors = ["Rory <fletcherh1993@gmail.com>"]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
asyncio = "^3.4.3"
pyzerolog = "^0.4.0"
aiohttp = "^3.11.9"
black = "^24.10.0"
isort = "^5.13.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
